# code-triage

./: .gitignore  Dockerfile  README.md  codetriage.py  pyproject.toml  pytest.ini  requirements.txt
output/: vars.py
scm/: github.py  github_public.py  scm.py
templates/: codetriage-config.toml  traige_config.toml
tests/: conftest.py
tests/e2e/: test_github_pull_tests_valid_triage_file.py  test_github_triage_file_generation_tests.py  test_github_triage_pull_tests.py
tests/unit/: test_spreadsheet_dict_is_valid.py
utils/: config.py  git_helpers.py  output.py
